--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "homepage": "https://github.com/Cisco-the-wayword/Leaderboard#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "csv-loader": "^3.0.5",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^6.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
