--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "css-loader": "^6.7.3",
     "csv-loader": "^3.0.5",
+    "eslint": "^8.38.0",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
